🐛 FIX: inline flex issues on iOS

--- a/src/scss/blocks/_time.scss
+++ b/src/scss/blocks/_time.scss
@@ -18,10 +18,11 @@
   }
 
   .greeting-wrapper {
-    display: inline-flex;
+    display: flex;
     justify-content: flex-start;
 
     .icon {
+      margin-block-start: 2px;
       margin-inline-end: 1rem;
     }
   }
